crates/keron-lang/tests/corpus/errors/check/fn_unknown_named_arg.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `f` has no parameter `b`
  --> 5:16
  |
5 | val x: Int = f(b = 1)
  |                ^
